三点やアイコンの修正

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -118,7 +118,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-line-chart fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-heartbeat fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">BDAの魅力</h4>
                     <p class="text-muted" style="text-align:left">BLACKDIAは、誰でも簡単に支払いを行うための仕組みと仮想通貨をより多く得られるようにする仕組みを提供して、人々が通貨を使う頻度を増加させることで通貨自体の価値を半永久的に上昇させる。</p>
@@ -199,7 +199,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2018/6月上旬</h4>
+                                    <h4>2018/6 上旬</h4>
                                     <h4 class="subheading">
                                         ホワイトペーパー発表<br>
                                         公式webの発表
@@ -216,7 +216,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2018/6月下旬</h4>
+                                    <h4>2018/6 下旬</h4>
                                     <h4 class="subheading">資金調達の実行</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -235,7 +235,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2018/7月上旬</h4>
+                                    <h4>2018/7 上旬</h4>
                                     <h4 class="subheading">Airdrop配布終了予定。</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -249,7 +249,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2018/7月下旬</h4>
+                                    <h4>2018/7 下旬</h4>
                                     <h4 class="subheading">取引所ロゴ公式発表。</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -266,7 +266,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2018/8月上旬</h4>
+                                    <h4>2018/8 上旬</h4>
                                     <h4 class="subheading">イーサリアムトークンへ</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -379,7 +379,7 @@
                         </div>
                     </div>
                     <div class="team-member" style="text-align:left">
-                        <h4>開発費 30%</h4>
+                        <h4>開発費 <i class="fa fa-ellipsis-h"></i> 30%</h4>
                         <div class="row">
                             <div class="col-sm-1">
                             </div>
@@ -389,17 +389,19 @@
                         </div>
                     </div>
                     <div class="team-member" style="text-align:left">
-                        <h4>上場時売却分 45%</h4>
+                        <h4>上場時売却分 <i class="fa fa-ellipsis-h"></i> 45%</h4>
                         <div class="row">
                             <div class="col-sm-1">
                             </div>
                             <div class="col-sm-11">
-                                取引所へ上場し45%売却し、<br>新たな取引所へ上場する為の資金として利用します。
+                                最初の上場時に20％を売却します。<br>
+                                残りは、新たな取引所へ上場する為の資金として<br>
+                                必要に応じて順次売却します。
                             </div>
                         </div>
                     </div>
                     <div class="team-member" style="text-align:left">
-                        <h4>マーケティング費 15%</h4>
+                        <h4>マーケティング費 <i class="fa fa-ellipsis-h"></i> 15%</h4>
                         <div class="row">
                             <div class="col-sm-1">
                             </div>
@@ -409,7 +411,7 @@
                         </div>
                     </div>
                     <div class="team-member" style="text-align:left">
-                        <h4>運営チーム 10%</h4>
+                        <h4>運営チーム <i class="fa fa-ellipsis-h"></i> 10%</h4>
                         <div class="row">
                             <div class="col-sm-1">
                             </div>
