ロードマップの画像部分の更新。 テイストをwhitepaperのものと合わせた

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -181,7 +181,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="rounded-circle img-fluid" src="img/about/2.jpg" alt="">
+                                <img class="rounded-circle img-fluid" src="img/holding/02.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -206,13 +206,13 @@
                                     </h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">(なぜ同時なのかの理由を添えてBDA/COINさん)</p>
+                                    <p class="text-muted">(ホワイトペーパー好評への所感をBDA/COINさんが記載すればいいかと)</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
+                                <img class="rounded-circle img-fluid" src="img/holding/04.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -231,7 +231,7 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
+                                <img class="rounded-circle img-fluid" src="img/holding/07.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -245,7 +245,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
+                                <img class="rounded-circle img-fluid" src="img/holding/08.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -309,7 +309,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
+                                <img class="rounded-circle img-fluid" src="img/holding/09.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -323,7 +323,7 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="rounded-circle img-fluid" src="img/holding/09.png" alt="">
+                                <img class="rounded-circle img-fluid" src="img/holding/10.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -434,7 +434,7 @@
             </div>
             <!-- 12を対象のcol-sm-(数値)で割った値で分割する -->
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
                         <h4>BDA / COIN</h4>
@@ -458,11 +458,11 @@
                         </ul-->
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
                         <h4>K. A.</h4>
-                        <p class="text-muted">Web / 開発 / BOT</p>
+                        <p class="text-muted">Web / BOT / 開発</p>
                         <!--ul class="list-inline social-buttons">
                           <li class="list-inline-item">
                             <a href="#">
@@ -482,11 +482,11 @@
                         </ul-->
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
                         <h4>ミニーマウス</h4>
-                        <p class="text-muted">広報 / マーケティング</p>
+                        <p class="text-muted">広報 / イベント担当 / 集客</p>
                         <!-- ul class="list-inline social-buttons">
                           <li class="list-inline-item">
                             <a href="#">
@@ -506,11 +506,11 @@
                         </ul-->
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
                         <h4>Ykyky</h4>
-                        <p class="text-muted">営業 / マーケティング</p>
+                        <p class="text-muted">営業 / 集客</p>
                         <!-- ul class="list-inline social-buttons">
                           <li class="list-inline-item">
                             <a href="#">
@@ -530,11 +530,11 @@
                         </ul-->
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
                         <h4>矢澤にこ</h4>
-                        <p class="text-muted">広報 / マーケティング</p>
+                        <p class="text-muted">広報 / イベント担当</p>
                         <!-- ul class="list-inline social-buttons">
                           <li class="list-inline-item">
                             <a href="#">
@@ -554,11 +554,35 @@
                         </ul-->
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
                         <h4>LOOK</h4>
                         <p class="text-muted">アドバイザー / 開発サポート</p>
+                        <!-- ul class="list-inline social-buttons">
+                          <li class="list-inline-item">
+                            <a href="#">
+                              <i class="fa fa-twitter"></i>
+                            </a>
+                          </li>
+                          <li class="list-inline-item">
+                            <a href="#">
+                              <i class="fa fa-facebook"></i>
+                            </a>
+                          </li>
+                          <li class="list-inline-item">
+                            <a href="#">
+                              <i class="fa fa-linkedin"></i>
+                            </a>
+                          </li>
+                        </ul-->
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
+                        <h4>TT</h4>
+                        <p class="text-muted">ブロックチェーンアドバイザー / サポーター</p>
                         <!-- ul class="list-inline social-buttons">
                           <li class="list-inline-item">
                             <a href="#">
