ロードマップのNEXT

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -165,7 +165,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2018/5/10</h4>
+                                    <h4>2018-5-10</h4>
                                     <h4 class="subheading">BLACK DIA COIN 誕生</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -184,7 +184,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2018/5/12</h4>
+                                    <h4>2018-5-12</h4>
                                     <h4 class="subheading">Air drop 配布開始</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -198,7 +198,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2018/6 上旬</h4>
+                                    <h4>2018-6上旬</h4>
                                     <h4 class="subheading">
                                         ホワイトペーパー発表<br>
                                         公式webの発表
@@ -215,7 +215,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2018/6 下旬</h4>
+                                    <h4>2018-6下旬</h4>
                                     <h4 class="subheading">資金調達の実行</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -234,7 +234,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2018/7 上旬</h4>
+                                    <h4>2018-7上旬</h4>
                                     <h4 class="subheading">Airdrop配布終了予定。</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -248,7 +248,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2018/7 下旬</h4>
+                                    <h4>2018-7下旬</h4>
                                     <h4 class="subheading">取引所ロゴ公式発表。</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -265,7 +265,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2018/8 上旬</h4>
+                                    <h4>2018-8上旬</h4>
                                     <h4 class="subheading">イーサリアムトークンへ</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -339,10 +339,11 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4>
+                                <img class="rounded-circle img-fluid" src="img/holding/99.png" alt="">
+                                <!--h4>
                                     <br>NEXT
                                     <br>
-                                </h4>
+                                </h4-->
                             </div>
                         </li>
                     </ul>
