--- a/public_html/index.html
+++ b/public_html/index.html
@@ -462,7 +462,7 @@
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
                         <h4>K. A.</h4>
-                        <p class="text-muted">Web / BOT / 開発</p>
+                        <p class="text-muted">Webクリエイター / BOT / 開発</p>
                         <!--ul class="list-inline social-buttons">
                           <li class="list-inline-item">
                             <a href="#">
