チェックイン

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -17,7 +17,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
     <!-- Custom styles for this template -->
     <link href="css/agency.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./font-awesome/css/font-awesome-plugin.css?v=201805231913">
+    <link rel="stylesheet" type="text/css" href="./font-awesome/css/font-awesome-plugin.css?v=201806010239">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.min.js"></script>
 </head>
 <body id="page-top">
@@ -436,7 +436,11 @@
             <div class="row">
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
+	                    <span class="fa-stack fa-4x">
+	                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+	                        <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
+	                    </span>
+                        <!-- img class="mx-auto rounded-circle" src="img/team/01.png" alt="" -->
                         <h4>BDA / COIN</h4>
                         <p class="text-muted">リーダー / 運営 / 開発</p>
                         <!--ul class="list-inline social-buttons">
@@ -460,7 +464,11 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
+	                    <span class="fa-stack fa-4x">
+	                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+	                        <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
+	                    </span>
+                        <!-- img class="mx-auto rounded-circle" src="img/team/01.png" alt="" -->
                         <h4>K. A.</h4>
                         <p class="text-muted">Webクリエイター / BOT / 開発</p>
                         <!--ul class="list-inline social-buttons">
@@ -484,9 +492,13 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
+	                    <span class="fa-stack fa-4x">
+	                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+	                        <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
+	                    </span>
+                        <!-- img class="mx-auto rounded-circle" src="img/team/01.png" alt="" -->
                         <h4>ミニーマウス</h4>
-                        <p class="text-muted">広報 / イベント担当 / 集客</p>
+                        <p class="text-muted">広報 / イベント / 集客</p>
                         <!-- ul class="list-inline social-buttons">
                           <li class="list-inline-item">
                             <a href="#">
@@ -508,7 +520,11 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
+	                    <span class="fa-stack fa-4x">
+	                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+	                        <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
+	                    </span>
+                        <!-- img class="mx-auto rounded-circle" src="img/team/01.png" alt="" -->
                         <h4>Ykyky</h4>
                         <p class="text-muted">営業 / 集客</p>
                         <!-- ul class="list-inline social-buttons">
@@ -532,9 +548,13 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
+	                    <span class="fa-stack fa-4x">
+	                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+	                        <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
+	                    </span>
+                        <!-- img class="mx-auto rounded-circle" src="img/team/01.png" alt="" -->
                         <h4>矢澤にこ</h4>
-                        <p class="text-muted">広報 / イベント担当</p>
+                        <p class="text-muted">広報 / イベント</p>
                         <!-- ul class="list-inline social-buttons">
                           <li class="list-inline-item">
                             <a href="#">
@@ -556,7 +576,11 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
+	                    <span class="fa-stack fa-4x">
+	                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+	                        <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
+	                    </span>
+                        <!-- img class="mx-auto rounded-circle" src="img/team/01.png" alt="" -->
                         <h4>LOOK</h4>
                         <p class="text-muted">アドバイザー / 開発サポート</p>
                         <!-- ul class="list-inline social-buttons">
@@ -580,7 +604,11 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
+	                    <span class="fa-stack fa-4x">
+	                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+	                        <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
+	                    </span>
+                        <!-- img class="mx-auto rounded-circle" src="img/team/01.png" alt="" -->
                         <h4>TT</h4>
                         <p class="text-muted">ブロックチェーンアドバイザー / サポーター</p>
                         <!-- ul class="list-inline social-buttons">
