ライト文の追記・修正。イメージを黒→黄色へと戻す。

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -86,7 +86,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading text-uppercase">WHITEPAPER</h2>
-                    <h3 class="section-subheading text-muted" style="font-size:1.3em">以下がホワイトペーパーから抜粋した概要（トピック）であるということのかるい説明文。</h3>
+                    <h3 class="section-subheading text-muted" style="font-size:1.3em"><a href="#"><i class="fa fa-download"></i> <u>ホワイトペーパー v1.1 PDFファイル</u></a></h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -153,7 +153,9 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading text-uppercase">RoadMap</h2>
-                    <h3 class="section-subheading text-muted" style="font-size:1.3em">ロードマップだよ、ということの軽い捕捉と注目点や傾向で見てほしい点があればここでさきにのべておく.</h3>
+                    <h3 class="section-subheading text-muted" style="font-size:1.3em">2021年 BAR オープン、そして様々な取引所へ！<br>
+                        我々のプロジェクトは上場がゴールではありません！<br>
+                        進化し続ける。 それが「BLACK DIA」です。</h3>
                 </div>
             </div>
             <div class="row">
@@ -171,9 +173,9 @@
                                 <div class="timeline-body">
                                     <p class="text-muted">
                                         wavesトークンとして、<br>
-                                        BLACK DIA COIN が誕生。<br>
-                                        発行枚数 1兆 枚。<br>
-                                        翌日より、取引所で売買開始。
+                                        BLACK DIA COIN が誕生しました。<br>
+                                        発行枚数 １兆 枚。<br>
+                                        翌日より、取引所で売買開始しました。
                                     </p>
                                 </div>
                             </div>
@@ -188,7 +190,8 @@
                                     <h4 class="subheading">Air drop 配布開始</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">(どういうエアドロップだったのかBDA/COINさん記載)</p>
+                                    <p class="text-muted">Discordコミュニティ参加者への50万BDA配布を皮切りにAirDropをスタート。<br>
+                                        その後、ルーレット・大型プレゼント・おみくじ など、様々なイベントで AirDrop 行なっています。</p>
                                 </div>
                             </div>
                         </li>
@@ -205,7 +208,8 @@
                                     </h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">(ホワイトペーパー好評への所感をBDA/COINさんが記載すればいいかと)</p>
+                                    <p class="text-muted">BAR決済としての我々のプロジェクトの目的が公表されました。<br>
+                                        これまでにない次世代型決済内容が盛り込まれたホワイトペーパーを発行しました！</p>
                                 </div>
                             </div>
                         </li>
@@ -221,9 +225,9 @@
                                 <div class="timeline-body">
                                     <p class="text-muted">
                                         ＣＥに上場に向け、トータル 4BTC の<br>
-                                        資金調達を予定。<br>
-                                        ICOではなく、公募などを執り行う予定。<br>
-                                        資金協力者にはBDAボーナスを送付する予定。
+                                        資金調達を予定です。<br>
+                                        ICOではなく、公募などを執り行う予定です。<br>
+                                        又、資金協力者にはBDAボーナスを送付する予定となっております。
                                     </p>
                                 </div>
                             </div>
@@ -238,7 +242,7 @@
                                     <h4 class="subheading">Airdrop配布終了予定。</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">(延期もあり)</p>
+                                    <p class="text-muted">(配布終了時期を変更する可能性もございます)</p>
                                 </div>
                             </div>
                         </li>
@@ -254,7 +258,7 @@
                                 <div class="timeline-body">
                                     <p class="text-muted">
                                         取引所などに掲載される「コインのロゴ」を発表予定です。<br>
-                                        (なんかBDA/COINさんコメントあればここに)
+                                        コミュニティ内ユーザー投稿を踏まえた上で、私BDAが厳選したロゴを公開します。
                                     </p>
                                 </div>
                             </div>
@@ -272,8 +276,7 @@
                                     <p class="text-muted">
                                         BDAはイーサリアムトークンへと<br>
                                         生まれ変わります。(ERC20ベース)<br>
-                                        各保有者の枚数に応じてETHへ等価交換実行。<br>
-                                        (あくまで予定)
+                                        各保有者の枚数に応じてETHへの等価交換(スワップ)を予定しています。
                                     </p>
                                 </div>
                             </div>
@@ -357,10 +360,6 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading text-uppercase">SPEC</h2>
-                    <h3 class="section-subheading text-muted" style="font-size:1.3em">
-                        運用費用の内訳だ、というかるい説明をここに記載する。<br>
-                        (聞いたことも無いような謎内訳がないのであれば、各々の項目に関する説明は不要？？)
-                    </h3>
                 </div>
                 <div class="col-sm-6" style="text-align:center">
                     <canvas id="CoinPortFolioGraph" style="height: 60vmin; width: 60vmin;"></canvas>
@@ -634,9 +633,14 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
                     <p class="large text-muted" style="font-size:1.3em">
-                        私たちがどのような想いで集まっているのか？<br>
-                        といったようなことを、ちょっと「粋」な文面で2行ほど記載する。集まったばかりのチームだよってことも記載する良い。<br>
-                    </p>
+                        私達は、元はこのコミュニティ内で知り合ったばかりのチームです。<br>
+                        しかし、チームが思う事は一つ。<br>
+                        <br>
+                        “もっとBARの良さを知って欲しい。楽しんで貰いたい”<br>
+                        <br>
+                        BARのメリットを知って欲しい思いから、<br>
+                        このプロジェクトが結成されました。<br>
+                        我々は気持ちを一つにし、この世界に革命を起こすため進化していきます！</p>
                 </div>
             </div>
         </div>
