--- a/public_html/index.html
+++ b/public_html/index.html
@@ -428,7 +428,6 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading text-uppercase">Team</h2>
-                    <h3 class="section-subheading text-muted" style="font-size:1.3em">以下がチームのメンバーであるということの説明。<br></h3>
                 </div>
             </div>
             <!-- 12を対象のcol-sm-(数値)で割った値で分割する -->
@@ -636,7 +635,7 @@
                         私達は、元はこのコミュニティ内で知り合ったばかりのチームです。<br>
                         しかし、チームが思う事は一つ。<br>
                         <br>
-                        “もっとBARの良さを知って欲しい。楽しんで貰いたい”<br>
+                        “もっとBARの良さを知って欲しい。楽しんで貰いたい。”<br>
                         <br>
                         BARのメリットを知って欲しい思いから、<br>
                         このプロジェクトが結成されました。<br>
