--- a/public_html/index.html
+++ b/public_html/index.html
@@ -17,14 +17,14 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
     <!-- Custom styles for this template -->
     <link href="css/agency.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./font-awesome/css/font-awesome-plugin.css?v=201806010239">
+    <link rel="stylesheet" type="text/css" href="./font-awesome/css/font-awesome-plugin.css?v=201806031024">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.min.js"></script>
 </head>
 <body id="page-top">
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" style="font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-style: italic;" href="#page-top"><i class="fa fa-bda2"></i> BLACK DIA COIN</a>
+            <a class="navbar-brand js-scroll-trigger" style="font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-style: italic;" href="#page-top"><i class="fa fa-bda3"></i> BLACK DIA COIN</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fa fa-bars"></i>
@@ -54,10 +54,9 @@
     <header class="masthead">
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in"><i class="fa fa-bda2"></i> BLACK DIA COIN</div>
+                <div class="intro-lead-in"><i class="fa fa-bda3"></i> BLACK DIA COIN</div>
                 <div class="intro-heading text-uppercase">
                     次世代のバー決済<br>
-                    <span style="font-size:0.5em">（みたいな一言系で）</span>
                 </div>
                 <!-- a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">もっと知る</a -->
             </div>
@@ -86,7 +85,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading text-uppercase">WHITEPAPER</h2>
-                    <h3 class="section-subheading text-muted" style="font-size:1.3em"><a href="#"><i class="fa fa-download"></i> <u>ホワイトペーパー v1.1 PDFファイル</u></a></h3>
+                    <h3 class="section-subheading text-muted" style="font-size:1.3em"><a href="#" style="color:#bea106"><i class="fa fa-download"></i> <u>ホワイトペーパー v1.1 PDFファイル</u></a></h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -172,7 +171,7 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
-                                        wavesトークンとして、<br>
+                                        Wavesトークンとして、<br>
                                         BLACK DIA COIN が誕生しました。<br>
                                         発行枚数 １兆 枚。<br>
                                         翌日より、取引所で売買開始しました。
@@ -239,10 +238,10 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>2018-7上旬</h4>
-                                    <h4 class="subheading">Airdrop配布終了予定。</h4>
+                                    <h4 class="subheading">Airdrop配布終了予定</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">(配布終了時期を変更する可能性もございます)</p>
+                                    <p class="text-muted">(配布終了時期を変更する可能性もございます。)</p>
                                 </div>
                             </div>
                         </li>
@@ -329,7 +328,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2020年</h4>
+                                    <h4>2021年</h4>
                                     <h4 class="subheading">仮想通貨BARをオープン</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -607,7 +606,7 @@
 	                        <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
 	                    </span>
                         <!-- img class="mx-auto rounded-circle" src="img/team/01.png" alt="" -->
-                        <h4>TT</h4>
+                        <h4>T T</h4>
                         <p class="text-muted">ブロックチェーンアドバイザー / サポーター</p>
                         <!-- ul class="list-inline social-buttons">
                           <li class="list-inline-item">
@@ -631,12 +630,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
-                    <p class="large text-muted" style="font-size:1.3em">
+                    <p class="large text-muted" style="font-size:1.0em">
                         私達は、元はこのコミュニティ内で知り合ったばかりのチームです。<br>
                         しかし、チームが思う事は一つ。<br>
-                        <br>
-                        “もっとBARの良さを知って欲しい。楽しんで貰いたい。”<br>
-                        <br>
+                        “もっとBARの良さを知って欲しい。楽しんで貰いたい。”                        <br>
                         BARのメリットを知って欲しい思いから、<br>
                         このプロジェクトが結成されました。<br>
                         我々は気持ちを一つにし、この世界に革命を起こすため進化していきます！</p>
