--- a/public_html/index.html
+++ b/public_html/index.html
@@ -152,9 +152,11 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading text-uppercase">RoadMap</h2>
-                    <h3 class="section-subheading text-muted" style="font-size:1.3em">2021年 BAR オープン、そして様々な取引所へ！<br>
+                    <h3 class="section-subheading text-muted" style="font-size:1.3em">
+                        2021年 BAR オープン、そして様々な取引所へ！<br>
                         我々のプロジェクトは上場がゴールではありません！<br>
-                        進化し続ける。 それが「BLACK DIA」です。</h3>
+                        進化し続ける。 それが「BLACK DIA」です。
+                    </h3>
                 </div>
             </div>
             <div class="row">
@@ -189,8 +191,10 @@
                                     <h4 class="subheading">Air drop 配布開始</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Discordコミュニティ参加者への50万BDA配布を皮切りにAirDropをスタート。<br>
-                                        その後、ルーレット・大型プレゼント・おみくじ など、様々なイベントで AirDrop 行なっています。</p>
+                                    <p class="text-muted">
+                                        Discordコミュニティ参加者への50万BDA配布を皮切りにAirDropをスタート。<br>
+                                        その後、ルーレット・大型プレゼント・おみくじ など、様々なイベントで AirDrop 行なっています。
+                                    </p>
                                 </div>
                             </div>
                         </li>
@@ -207,8 +211,10 @@
                                     </h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">BAR決済としての我々のプロジェクトの目的が公表されました。<br>
-                                        これまでにない次世代型決済内容が盛り込まれたホワイトペーパーを発行しました！</p>
+                                    <p class="text-muted">
+                                        BAR決済としての我々のプロジェクトの目的が公表されました。<br>
+                                        これまでにない次世代型決済内容が盛り込まれたホワイトペーパーを発行しました！
+                                    </p>
                                 </div>
                             </div>
                         </li>
@@ -433,178 +439,70 @@
             <div class="row">
                 <div class="col-sm-3">
                     <div class="team-member">
-	                    <span class="fa-stack fa-4x">
-	                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-	                        <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
-	                    </span>
-                        <!-- img class="mx-auto rounded-circle" src="img/team/01.png" alt="" -->
+                        <span class="fa-stack fa-4x">
+                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
+                        </span>
                         <h4>BDA / COIN</h4>
                         <p class="text-muted">リーダー / 運営 / 開発</p>
-                        <!--ul class="list-inline social-buttons">
-                          <li class="list-inline-item">
-                            <a href="#">
-                              <i class="fa fa-twitter"></i>
-                            </a>
-                          </li>
-                          <li class="list-inline-item">
-                            <a href="#">
-                              <i class="fa fa-facebook"></i>
-                            </a>
-                          </li>
-                          <li class="list-inline-item">
-                            <a href="#">
-                              <i class="fa fa-linkedin"></i>
-                            </a>
-                          </li>
-                        </ul-->
                     </div>
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-	                    <span class="fa-stack fa-4x">
-	                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-	                        <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
-	                    </span>
-                        <!-- img class="mx-auto rounded-circle" src="img/team/01.png" alt="" -->
+                        <span class="fa-stack fa-4x">
+                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
+                        </span>
                         <h4>K. A.</h4>
                         <p class="text-muted">Webクリエイター / BOT / 開発</p>
-                        <!--ul class="list-inline social-buttons">
-                          <li class="list-inline-item">
-                            <a href="#">
-                              <i class="fa fa-twitter"></i>
-                            </a>
-                          </li>
-                          <li class="list-inline-item">
-                            <a href="#">
-                              <i class="fa fa-facebook"></i>
-                            </a>
-                          </li>
-                          <li class="list-inline-item">
-                            <a href="#">
-                              <i class="fa fa-linkedin"></i>
-                            </a>
-                          </li>
-                        </ul-->
                     </div>
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-	                    <span class="fa-stack fa-4x">
-	                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-	                        <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
-	                    </span>
-                        <!-- img class="mx-auto rounded-circle" src="img/team/01.png" alt="" -->
+                        <span class="fa-stack fa-4x">
+                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
+                        </span>
                         <h4>ミニーマウス</h4>
                         <p class="text-muted">広報 / イベント / 集客</p>
-                        <!-- ul class="list-inline social-buttons">
-                          <li class="list-inline-item">
-                            <a href="#">
-                              <i class="fa fa-twitter"></i>
-                            </a>
-                          </li>
-                          <li class="list-inline-item">
-                            <a href="#">
-                              <i class="fa fa-facebook"></i>
-                            </a>
-                          </li>
-                          <li class="list-inline-item">
-                            <a href="#">
-                              <i class="fa fa-linkedin"></i>
-                            </a>
-                          </li>
-                        </ul-->
                     </div>
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-	                    <span class="fa-stack fa-4x">
-	                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-	                        <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
-	                    </span>
-                        <!-- img class="mx-auto rounded-circle" src="img/team/01.png" alt="" -->
+                        <span class="fa-stack fa-4x">
+                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
+                        </span>
                         <h4>Ykyky</h4>
                         <p class="text-muted">営業 / 集客</p>
-                        <!-- ul class="list-inline social-buttons">
-                          <li class="list-inline-item">
-                            <a href="#">
-                              <i class="fa fa-twitter"></i>
-                            </a>
-                          </li>
-                          <li class="list-inline-item">
-                            <a href="#">
-                              <i class="fa fa-facebook"></i>
-                            </a>
-                          </li>
-                          <li class="list-inline-item">
-                            <a href="#">
-                              <i class="fa fa-linkedin"></i>
-                            </a>
-                          </li>
-                        </ul-->
                     </div>
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-	                    <span class="fa-stack fa-4x">
-	                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-	                        <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
-	                    </span>
-                        <!-- img class="mx-auto rounded-circle" src="img/team/01.png" alt="" -->
+                        <span class="fa-stack fa-4x">
+                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
+                        </span>
                         <h4>矢澤にこ</h4>
                         <p class="text-muted">広報 / イベント</p>
-                        <!-- ul class="list-inline social-buttons">
-                          <li class="list-inline-item">
-                            <a href="#">
-                              <i class="fa fa-twitter"></i>
-                            </a>
-                          </li>
-                          <li class="list-inline-item">
-                            <a href="#">
-                              <i class="fa fa-facebook"></i>
-                            </a>
-                          </li>
-                          <li class="list-inline-item">
-                            <a href="#">
-                              <i class="fa fa-linkedin"></i>
-                            </a>
-                          </li>
-                        </ul-->
                     </div>
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-	                    <span class="fa-stack fa-4x">
-	                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-	                        <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
-	                    </span>
-                        <!-- img class="mx-auto rounded-circle" src="img/team/01.png" alt="" -->
+                        <span class="fa-stack fa-4x">
+                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
+                        </span>
                         <h4>LOOK</h4>
                         <p class="text-muted">アドバイザー / 開発サポート</p>
-                        <!-- ul class="list-inline social-buttons">
-                          <li class="list-inline-item">
-                            <a href="#">
-                              <i class="fa fa-twitter"></i>
-                            </a>
-                          </li>
-                          <li class="list-inline-item">
-                            <a href="#">
-                              <i class="fa fa-facebook"></i>
-                            </a>
-                          </li>
-                          <li class="list-inline-item">
-                            <a href="#">
-                              <i class="fa fa-linkedin"></i>
-                            </a>
-                          </li>
-                        </ul-->
                     </div>
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-	                    <span class="fa-stack fa-4x">
-	                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-	                        <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
-	                    </span>
+                        <span class="fa-stack fa-4x">
+                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
+                        </span>
                         <!-- img class="mx-auto rounded-circle" src="img/team/01.png" alt="" -->
                         <h4>T T</h4>
                         <p class="text-muted">ブロックチェーンアドバイザー / サポーター</p>
@@ -636,88 +534,12 @@
                         “もっとBARの良さを知って欲しい。楽しんで貰いたい。”                        <br>
                         BARのメリットを知って欲しい思いから、<br>
                         このプロジェクトが結成されました。<br>
-                        我々は気持ちを一つにし、この世界に革命を起こすため進化していきます！</p>
+                        我々は気持ちを一つにし、この世界に革命を起こすため進化していきます！
+                    </p>
                 </div>
             </div>
         </div>
     </section>
-
-    <!-- Clients -->
-    <!--
-    <section class="py-5">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3 col-sm-6">
-            <a href="#">
-              <img class="img-fluid d-block mx-auto" src="img/logos/envato.jpg" alt="">
-            </a>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <a href="#">
-              <img class="img-fluid d-block mx-auto" src="img/logos/designmodo.jpg" alt="">
-            </a>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <a href="#">
-              <img class="img-fluid d-block mx-auto" src="img/logos/themeforest.jpg" alt="">
-            </a>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <a href="#">
-              <img class="img-fluid d-block mx-auto" src="img/logos/creative-market.jpg" alt="">
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
-    -->
-    <!-- Contact -->
-    <!--
-    <section id="qanda">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Q & A</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12">
-            <form id="contactForm" name="sentMessage" novalidate="novalidate">
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <input class="form-control" id="name" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name.">
-                    <p class="help-block text-danger"></p>
-                  </div>
-                  <div class="form-group">
-                    <input class="form-control" id="email" type="email" placeholder="Your Email *" required="required" data-validation-required-message="Please enter your email address.">
-                    <p class="help-block text-danger"></p>
-                  </div>
-                  <div class="form-group">
-                    <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" required="required" data-validation-required-message="Please enter your phone number.">
-                    <p class="help-block text-danger"></p>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <textarea class="form-control" id="message" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message."></textarea>
-                    <p class="help-block text-danger"></p>
-                  </div>
-                </div>
-                <div class="clearfix"></div>
-                <div class="col-lg-12 text-center">
-                  <div id="success"></div>
-                  <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button>
-                </div>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </section>
-    <-->
-    <!-- Footer -->
     <footer>
         <div class="container">
             <div class="row">
@@ -738,16 +560,6 @@
                         </li>
                     </ul>
                 </div>
-                <!--div class="col-md-4">
-                  <ul class="list-inline quicklinks">
-                    <li class="list-inline-item">
-                      <a href="#">Privacy Policy</a>
-                    </li>
-                    <li class="list-inline-item">
-                      <a href="#">Terms of Use</a>
-                    </li>
-                  </ul>
-                </div-->
             </div>
         </div>
     </footer>
