ロードマップ画像の追加や修正

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -200,6 +200,25 @@
                         </li>
                         <li>
                             <div class="timeline-image">
+                                <img class="rounded-circle img-fluid" src="img/holding/13.png" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>2018-6-1</h4>
+                                    <h4 class="subheading">
+                                        公式キャラクター<br>ディアたん♡発表
+                                    </h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">
+                                        公式キャラクターとしてディアたん♡を発表しました。<br>
+                                        同ＡＩキャラクターによる「おみくじ」「会話」のDiscordチャンネルを新設しました。
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
                                 <img class="rounded-circle img-fluid" src="img/holding/03.png" alt="">
                             </div>
                             <div class="timeline-panel">
@@ -218,7 +237,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="timeline-inverted">
+                        <li>
                             <div class="timeline-image">
                                 <img class="rounded-circle img-fluid" src="img/holding/04.png" alt="">
                             </div>
@@ -237,7 +256,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li>
+                        <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <img class="rounded-circle img-fluid" src="img/holding/07.png" alt="">
                             </div>
@@ -251,7 +270,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="timeline-inverted">
+                        <li>
                             <div class="timeline-image">
                                 <img class="rounded-circle img-fluid" src="img/holding/08.png" alt="">
                             </div>
@@ -268,7 +287,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li>
+                        <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <img class="rounded-circle img-fluid" src="img/holding/05.png" alt="">
                             </div>
@@ -286,7 +305,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="timeline-inverted">
+                        <li>
                             <div class="timeline-image">
                                 <img class="rounded-circle img-fluid" src="img/holding/06.png" alt="">
                             </div>
@@ -300,7 +319,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li>
+                        <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <img class="rounded-circle img-fluid" src="img/holding/12.png" alt="">
                             </div>
@@ -314,7 +333,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="timeline-inverted">
+                        <li>
                             <div class="timeline-image">
                                 <img class="rounded-circle img-fluid" src="img/holding/09.png" alt="">
                             </div>
@@ -328,7 +347,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li>
+                        <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <img class="rounded-circle img-fluid" src="img/holding/10.png" alt="">
                             </div>
@@ -345,13 +364,13 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="timeline-inverted">
+                        <li>
                             <div class="timeline-image">
                                 <img class="rounded-circle img-fluid" src="img/holding/99.png" alt="">
                                 <!--h4>
-                                    <br>NEXT
-                                    <br>
-                                </h4-->
+                <br>NEXT
+                <br>
+            </h4-->
                             </div>
                         </li>
                     </ul>
